# idxread

./: .gitmodules  CMakeLists.txt  README.md
src/idxread/: CMakeLists.txt  main.c
